
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int header ;
struct TYPE_3__ {char* e_ident; } ;
typedef TYPE_1__ Elf32_Ehdr ;


 size_t EI_CLASS ;
 size_t EI_DATA ;
 size_t EI_MAG0 ;
 size_t EI_MAG1 ;
 size_t EI_MAG2 ;
 size_t EI_MAG3 ;
 float ELFCLASS32 ;
 float ELFDATA2LSB ;
 char ELFMAG0 ;
 int fprintf (int ,char*) ;
 int perror (char*) ;
 int read (int,TYPE_1__*,int) ;
 int stderr ;

int isELF(int fd)
{
 Elf32_Ehdr header;

 if(read(fd, &header, sizeof(header)) == -1){
  perror("isELF(): read");
  return 0;
 }


 if(header.e_ident[EI_MAG0] != ELFMAG0 ||
   header.e_ident[EI_MAG1] != 'E' ||
   header.e_ident[EI_MAG2] != 'L' ||
   header.e_ident[EI_MAG3] != 'F'){
  fprintf(stderr, "The argument given is not an ELF file !\n");
  return 0;
 }


 if(header.e_ident[EI_CLASS] != ELFCLASS32){
  fprintf(stderr, "Only 32-bit ELF files supported !\n");
  return 0;
 }


 if(header.e_ident[EI_DATA] != ELFDATA2LSB){
  fprintf(stderr, "Only little-endian ELF files supported !\n");
  return 0;
 }

 return 1;
}
